@@ -129,7 +129,7 @@
             <locale name="C">
                 <short>Command line</short>
                 <long>
-                    Command line to be executed in shell
+                    Command line to be executed in shell when run_command0 is invoked
                 </long>
             </locale>
         </schema>
@@ -143,7 +143,7 @@
             <locale name="C">
                 <short>Run command</short>
                 <long>
-                    Run shell command
+                    A keybinding that when invoked, will run the shell command identified by command0
                 </long>
             </locale>
         </schema>
@@ -157,7 +157,7 @@
             <locale name="C">
                 <short>Command line</short>
                 <long>
-                    Command line to be executed in shell
+                    Command line to be executed in shell when run_command1 is invoked
                 </long>
             </locale>
         </schema>
@@ -171,7 +171,7 @@
             <locale name="C">
                 <short>Run command</short>
                 <long>
-                    Run shell command
+                    A keybinding that when invoked, will run the shell command identified by command1
                 </long>
             </locale>
         </schema>
@@ -185,7 +185,7 @@
             <locale name="C">
                 <short>Command line</short>
                 <long>
-                    Command line to be executed in shell
+                    Command line to be executed in shell when run_command2 is invoked
                 </long>
             </locale>
         </schema>
@@ -199,7 +199,7 @@
             <locale name="C">
                 <short>Run command</short>
                 <long>
-                    Run shell command
+                    A keybinding that when invoked, will run the shell command identified by command2
                 </long>
             </locale>
         </schema>
@@ -213,7 +213,7 @@
             <locale name="C">
                 <short>Command line</short>
                 <long>
-                    Command line to be executed in shell
+                    Command line to be executed in shell when run_command3 is invoked
                 </long>
             </locale>
         </schema>
@@ -227,7 +227,7 @@
             <locale name="C">
                 <short>Run command</short>
                 <long>
-                    Run shell command
+                    A keybinding that when invoked, will run the shell command identified by command3
                 </long>
             </locale>
         </schema>
@@ -241,7 +241,7 @@
             <locale name="C">
                 <short>Command line</short>
                 <long>
-                    Command line to be executed in shell
+                    Command line to be executed in shell when run_command4 is invoked
                 </long>
             </locale>
         </schema>
@@ -255,7 +255,7 @@
             <locale name="C">
                 <short>Run command</short>
                 <long>
-                    Run shell command
+                    A keybinding that when invoked, will run the shell command identified by command4
                 </long>
             </locale>
         </schema>
@@ -269,7 +269,7 @@
             <locale name="C">
                 <short>Command line</short>
                 <long>
-                    Command line to be executed in shell
+                    Command line to be executed in shell when run_command5 is invoked
                 </long>
             </locale>
         </schema>
@@ -283,7 +283,7 @@
             <locale name="C">
                 <short>Run command</short>
                 <long>
-                    Run shell command
+                    A keybinding that when invoked, will run the shell command identified by command5
                 </long>
             </locale>
         </schema>
@@ -297,7 +297,7 @@
             <locale name="C">
                 <short>Command line</short>
                 <long>
-                    Command line to be executed in shell
+                    Command line to be executed in shell when run_command6 is invoked
                 </long>
             </locale>
         </schema>
@@ -311,7 +311,7 @@
             <locale name="C">
                 <short>Run command</short>
                 <long>
-                    Run shell command
+                    A keybinding that when invoked, will run the shell command identified by command6
                 </long>
             </locale>
         </schema>
@@ -325,7 +325,7 @@
             <locale name="C">
                 <short>Command line</short>
                 <long>
-                    Command line to be executed in shell
+                    Command line to be executed in shell when run_command7 is invoked
                 </long>
             </locale>
         </schema>
@@ -339,7 +339,7 @@
             <locale name="C">
                 <short>Run command</short>
                 <long>
-                    Run shell command
+                    A keybinding that when invoked, will run the shell command identified by command7
                 </long>
             </locale>
         </schema>
@@ -353,7 +353,7 @@
             <locale name="C">
                 <short>Command line</short>
                 <long>
-                    Command line to be executed in shell
+                    Command line to be executed in shell when run_command8 is invoked
                 </long>
             </locale>
         </schema>
@@ -367,7 +367,7 @@
             <locale name="C">
                 <short>Run command</short>
                 <long>
-                    Run shell command
+                    A keybinding that when invoked, will run the shell command identified by command8
                 </long>
             </locale>
         </schema>
@@ -381,7 +381,7 @@
             <locale name="C">
                 <short>Command line</short>
                 <long>
-                    Command line to be executed in shell
+                    Command line to be executed in shell when run_command9 is invoked
                 </long>
             </locale>
         </schema>
@@ -395,7 +395,7 @@
             <locale name="C">
                 <short>Run command</short>
                 <long>
-                    Run shell command
+                    A keybinding that when invoked, will run the shell command identified by command9
                 </long>
             </locale>
         </schema>
@@ -409,7 +409,7 @@
             <locale name="C">
                 <short>Command line</short>
                 <long>
-                    Command line to be executed in shell
+                    Command line to be executed in shell when run_command10 is invoked
                 </long>
             </locale>
         </schema>
@@ -423,7 +423,7 @@
             <locale name="C">
                 <short>Run command</short>
                 <long>
-                    Run shell command
+                    A keybinding that when invoked, will run the shell command identified by command10
                 </long>
             </locale>
         </schema>
@@ -437,7 +437,7 @@
             <locale name="C">
                 <short>Command line</short>
                 <long>
-                    Command line to be executed in shell
+                    Command line to be executed in shell when run_command11 is invoked
                 </long>
             </locale>
         </schema>
@@ -451,7 +451,7 @@
             <locale name="C">
                 <short>Run command</short>
                 <long>
-                    Run shell command
+                    A keybinding that when invoked, will run the shell command identified by command11
                 </long>
             </locale>
         </schema>
@@ -645,7 +645,7 @@
             <applyto>/apps/compiz/general/screen0/options/refresh_rate</applyto>
             <owner>compiz</owner>
             <type>int</type>
-            <default>60</default>
+            <default>75</default>
             <locale name="C">
                 <short>Refresh Rate</short>
                 <long>
