@@ -1,5 +1,9 @@
 2006-04-09  David Reveman  <davidr@novell.com>
 
+	* plugins/compiz.schemas:
+	* src/display.c:
+	Improve documentation for runcommand keys slightly. (Mike Hearn)
+
 	* include/compiz.h:
 	* src/texture.c:
 	* src/screen.c (addScreen): Switch to using GLX 1.3 functions.
